2002-07-23  David Hyatt  <hyatt@apple.com>

	Fixing two bugs here.  The first is bug with @import sheets not inheriting strict parsing mode from their parent sheet.
	This means all @import sheets are being treated as strict mode! 

	The second bug is in KWQ.  We were never calling determineParseMode, so we always defaulted to strict mode, and therefore
	were highly intolerant of unitless numbers on absolutely positioned blocks.  This fixes many problems, notably www.netscape.com
	and ZDNet.com on the cvs-base tests.
        * khtml/css/cssparser.h:
        * kwq/KWQKHTMLPartImpl.mm:
        (KWQKHTMLPartImpl::write):

2002-07-23  Darin Adler  <darin@apple.com>

	- fixed 3004818 -- relative urls are assembled incorrectly at ticketmaster
	- fixed 2999279 -- Invalid URI in request at subpage of swatch.com

	The issue here is URLs with paths that start with "/../". RFC 2396 says one
	thing, and that's what CFURL does. But real web browsers do another thing.

        * kwq/KWQKURL.mm:
        (KURL::KWQKURLPrivate::KWQKURLPrivate): Clean up a bit by removing unneeded init().
        (escapeQString): Don't make a copy of the passed-in QString.
        (pathEndsWithSlash): Don't make a copy of the passed-in QString.
        (copyEscapedPath): Make this a static function instead of extern.
        (KURL::KWQKURLPrivate::decompose): Add the new "../" and "./" logic.

2002-07-23  David Hyatt  <hyatt@apple.com>

        * khtml/rendering/font.cpp:
	Fix deployment build bustage by including <algorithm>.
	
        * khtml/rendering/render_frames.cpp:
        (RenderPartObject::calcReplacedWidth):
	Fix a bug with http://www.moveabletype.com's top portion
	not showing up (bug 2986714).  A hack was being improperly
	applied to fixed width plugins, when it should have only
	been applied to variable width plugins.
	
2002-07-23  Darin Adler  <darin@apple.com>

        * Makefile.am: Clean based on all, not all-am, so it happens before subdirs
	if any.
